# YSCV

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  QUICKSTART.md  README.md  context.md
.cargo/: config.toml
apps/bench/: Cargo.toml
apps/bench/src/: fpv_latency.rs  main.rs
apps/camera-face-tool/: Cargo.toml
apps/llm-bench/: COMPARISON.md  Cargo.toml  README.md
apps/llm-bench/python/: bench_ort.py  prepare_paired_calibration.py
apps/llm-bench/scripts/: bench_tracker_quant_matrix.sh
apps/llm-bench/src/: main.rs
benchmarks/perf-runners/onnx-pr-bench/: Cargo.toml  compare.py  download-assets.sh  run-suite.sh  suite.json
benchmarks/perf-runners/onnx-pr-bench/src/: main.rs
crates/yscv/: Cargo.toml  README.md
crates/yscv-autograd/: Cargo.toml  README.md
crates/yscv-autograd/src/: error.rs  graph.rs
crates/yscv-autograd/src/backward/: activation.rs  attention.rs  elementwise.rs  linalg.rs  norm.rs  pool.rs  shape.rs
crates/yscv-cli/: Cargo.toml  README.md
crates/yscv-cli/src/: lib.rs
crates/yscv-cpu/: Cargo.toml  README.md
crates/yscv-cpu/src/: detect_aarch64.rs  detect_x86.rs  lib.rs
crates/yscv-detect/: Cargo.toml  README.md
crates/yscv-detect/src/: lib.rs  nms.rs  proptest_tests.rs  yolo.rs
crates/yscv-eval/: Cargo.toml  README.md
crates/yscv-eval/src/: lib.rs
crates/yscv-imgproc/: Cargo.toml  README.md
crates/yscv-imgproc/benches/: imgproc_morph.rs  imgproc_ops.rs  imgproc_u8.rs
crates/yscv-imgproc/proptest-regressions/: proptest_tests.txt
crates/yscv-imgproc/src/: core.rs  lib.rs  proptest_tests.rs
crates/yscv-imgproc/src/ops/: augment.rs  color.rs  f32_ops.rs  fast.rs  features.rs  filter.rs  geometry.rs  histogram.rs  mod.rs  morphology.rs  normalize.rs  resize.rs  threshold.rs  u8_canny.rs  u8_color.rs  u8_features.rs  u8_filters.rs  u8_harris.rs  u8_resize.rs
crates/yscv-kernels/: Cargo.toml  README.md  build.rs
crates/yscv-kernels/benches/: int8_fused_dw_pw_3x3.rs  int8_fused_pw_dw_3x3.rs  kernels_cpu_ops.rs
crates/yscv-kernels/examples/: matmul_trans_a_probe.rs  pw_vs_gemm_probe.rs  sgemm_ab.rs
crates/yscv-kernels/src/: backend.rs  core.rs  error.rs  gpu_backend.rs  lib.rs  metal_backend.rs  proptest_tests.rs  scope_ctx.rs
crates/yscv-kernels/src/arch/: detect_aarch64.rs  detect_x86.rs  mod.rs
crates/yscv-kernels/src/asm/: aarch64.S  asm_common.h  x86_64_sysv.S  x86_64_win64.S
crates/yscv-kernels/src/backend/: api.rs  mod.rs
crates/yscv-kernels/src/gpu/: backend.rs  buffer.rs  helpers.rs  mod.rs  recorded.rs  shaders.rs
crates/yscv-kernels/src/metal/: metal_conv.rs  mod.rs  mpsgraph.rs
crates/yscv-kernels/src/ops/: attention.rs  config.rs  conv.rs  elementwise.rs  first_layer_3x3.rs  fused_pw_dw_3x3.rs  int4_matmul.rs  int8_depthwise.rs  int8_fused_dw_pw_3x3.rs  int8_fused_pw_dw_3x3.rs  int8_matmul.rs  int8_requant.rs  layout.rs  matmul.rs  mod.rs  nchwc_dw3x3.rs  nchwc_ops.rs  nchwc_pack.rs  nchwc_pointwise.rs  norm.rs  pool.rs  quantize.rs  rope.rs
crates/yscv-kernels/src/rknn/: backend.rs  compile.rs  consts.rs  custom_op.rs  ffi.rs  mod.rs  pipeline.rs
crates/yscv-kernels/src/shaders/: attention_backward.wgsl  avg_pool2d_backward.wgsl  batch_norm_backward.wgsl  conv2d_bias_grad.wgsl  conv2d_weight_grad.wgsl  embedding_backward.wgsl  gru_backward.wgsl  lstm_backward.wgsl  max_pool2d_backward.wgsl  rnn_backward.wgsl  softmax_backward.wgsl
crates/yscv-kernels/src/tests/: conv2d.rs  conv3d.rs  elementwise.rs  matmul.rs  mod.rs  nchwc.rs  softmax.rs
crates/yscv-model/: Cargo.toml  README.md
crates/yscv-model/src/: callbacks.rs  data_loader.rs  hub.rs  lib.rs  onnx_export.rs  safetensors.rs  weight_mapping.rs  weights.rs  zoo.rs
crates/yscv-model/src/layers/: conv.rs  norm.rs
crates/yscv-onnx/: Cargo.toml  README.md  build.rs
crates/yscv-onnx/src/: cpu_topology.rs  error.rs  exporter.rs  generate.rs  lib.rs  loader.rs  optimizer.rs  proptest_tests.rs  quantize.rs
crates/yscv-optim/: Cargo.toml  README.md
crates/yscv-optim/src/: adam.rs  adamw.rs  lamb.rs  lookahead.rs  radam.rs  sgd.rs
crates/yscv-pipeline/: Cargo.toml  README.md
crates/yscv-pipeline/src/: accelerator.rs  config.rs  dispatch.rs  error.rs  lib.rs  scheduler.rs
crates/yscv-quantize-cli/: Cargo.toml  README.md
crates/yscv-quantize-cli/src/: main.rs
crates/yscv-recognize/: Cargo.toml  README.md
crates/yscv-tensor/: Cargo.toml  README.md
crates/yscv-tensor/src/: aligned.rs  core.rs  lib.rs  ops.rs  proptest_tests.rs  tensor.rs
crates/yscv-threadpool/: Cargo.toml  README.md
crates/yscv-threadpool/src/: affinity.rs  job.rs  lib.rs  scope.rs  section.rs  tests.rs
crates/yscv-track/: Cargo.toml  README.md
crates/yscv-track/src/: byte_track.rs  lib.rs  reid.rs  tracker.rs
crates/yscv-video/: Cargo.toml  README.md
crates/yscv-video-mpp/: Cargo.toml  README.md
crates/yscv-video-mpp/src/: encoder.rs  error.rs  ffi.rs  lib.rs
crates/yscv-video/proptest-regressions/: proptest_tests.txt
crates/yscv-video/src/: audio.rs  av1_decoder.rs  av1_obu.rs  codec.rs  convert.rs  core.rs  drm_output.rs  frame_common.rs  frame_pipeline.rs  frame_pipeline_5stage.rs  framebuffer.rs  h264_bitstream.rs  h264_cabac.rs  h264_decoder.rs  h264_encoder.rs  h264_motion.rs  h264_params.rs  h264_transform.rs  h264_yuv.rs  hevc_cabac.rs  hevc_decoder.rs  hevc_filter.rs  hevc_inter.rs  hevc_parallel.rs  hevc_params.rs  hevc_syntax.rs  hevc_transform.rs  hw_decode.rs  latency_histogram.rs  mavlink.rs  mjpeg.rs  mkv.rs  overlay.rs  proptest_tests.rs  realtime.rs  rga.rs  tests.rs  v4l2.rs  video_io.rs
crates/yscv-video/tests/: hevc_integration.rs
crates/yscv/src/: lib.rs
examples/: Cargo.toml  README.md
examples/src/: bench_metal_conv.rs  bench_metal_vball.rs  bench_metal_yolo.rs  bench_mps_gemm.rs  bench_mpsgraph.rs  bench_mpsgraph_only.rs  bench_video_decode.rs  board_pipeline.rs  debug_metal_yolo.rs  edge_pipeline.rs  edge_pipeline_v2.rs  yolo_detect.rs  yolo_vis.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_h264_nal.rs  fuzz_hevc_nal.rs  fuzz_image_decode.rs  fuzz_mkv.rs  fuzz_onnx_load.rs
(+152 files in other folders)
