[package]
name = "yscv-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
default = []
gpu = ["yscv-onnx/gpu", "yscv-kernels/gpu"]
metal-backend = ["yscv-kernels/metal-backend", "yscv-onnx/metal-backend"]

[dependencies]
yscv-tensor = { path = "../crates/yscv-tensor" }
yscv-autograd = { path = "../crates/yscv-autograd" }
yscv-model = { path = "../crates/yscv-model" }
yscv-imgproc = { path = "../crates/yscv-imgproc" }
yscv-detect = { path = "../crates/yscv-detect" }
yscv-eval = { path = "../crates/yscv-eval" }
yscv-video = { path = "../crates/yscv-video" }
yscv-track = { path = "../crates/yscv-track" }
yscv-optim = { path = "../crates/yscv-optim" }
yscv-kernels = { path = "../crates/yscv-kernels" }
yscv-onnx = { path = "../crates/yscv-onnx" }
thiserror.workspace = true

[[example]]
name = "classify_image"
path = "src/classify_image.rs"

[[example]]
name = "train_linear"
path = "src/train_linear.rs"

[[example]]
name = "detect_objects"
path = "src/detect_objects.rs"

[[example]]
name = "image_processing"
path = "src/image_processing.rs"

[[example]]
name = "train_cnn"
path = "src/train_cnn.rs"

[[example]]
name = "image_pipeline"
path = "src/image_pipeline.rs"

[[example]]
name = "yolo_detect"
path = "src/yolo_detect.rs"

[[example]]
name = "yolo_finetune"
path = "src/yolo_finetune.rs"

[[example]]
name = "bench_yolo"
path = "src/bench_yolo.rs"

[[example]]
name = "bench_gpu"
path = "src/bench_gpu.rs"
required-features = ["gpu"]

[[example]]
name = "bench_metal_yolo"
path = "src/bench_metal_yolo.rs"
required-features = ["metal-backend"]

[[example]]
name = "bench_metal_conv"
path = "src/bench_metal_conv.rs"
required-features = ["metal-backend"]

[[example]]
name = "bench_mps_gemm"
path = "src/bench_mps_gemm.rs"
required-features = ["metal-backend"]

[[example]]
name = "bench_vball_cpu"
path = "src/bench_vball_cpu.rs"

[[example]]
name = "bench_mpsgraph"
path = "src/bench_mpsgraph.rs"
required-features = ["metal-backend"]

[[example]]
name = "bench_mpsgraph_only"
path = "src/bench_mpsgraph_only.rs"
required-features = ["metal-backend"]

[[example]]
name = "bench_metal_vball"
path = "src/bench_metal_vball.rs"
required-features = ["metal-backend"]

[lints]
workspace = true
