[package]
name = "yscv-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
# CI uses `cargo run --release -p yscv-bench` to run the main benchmark
# suite. Without `default-run`, cargo errors out because two binaries
# (`yscv-bench` and `fpv-latency`) are defined — this pins the default.
default-run = "yscv-bench"

[dependencies]
yscv-tensor = { path = "../../crates/yscv-tensor" }
yscv-kernels = { path = "../../crates/yscv-kernels" }
yscv-imgproc = { path = "../../crates/yscv-imgproc" }
yscv-autograd = { path = "../../crates/yscv-autograd" }
yscv-video = { path = "../../crates/yscv-video" }
yscv-detect = { path = "../../crates/yscv-detect" }
yscv-track = { path = "../../crates/yscv-track" }
yscv-optim = { path = "../../crates/yscv-optim" }
mimalloc = { version = "0.1", default-features = false }

[[bin]]
name = "yscv-bench"
path = "src/main.rs"

[[bin]]
name = "fpv-latency"
path = "src/fpv_latency.rs"

[lints]
workspace = true
