[package]
name = "camera-face-tool"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[features]
default = []
native-camera = ["yscv-video/native-camera"]

[dependencies]
yscv-detect = { path = "../../crates/yscv-detect" }
yscv-recognize = { path = "../../crates/yscv-recognize" }
yscv-tensor = { path = "../../crates/yscv-tensor" }
yscv-track = { path = "../../crates/yscv-track" }
yscv-video = { path = "../../crates/yscv-video" }
serde_json = "1.0"
thiserror.workspace = true

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "camera_face_runtime_ops"
harness = false

[lints]
workspace = true
