[package]
name = "yscv-llm-bench"
description = "Throughput bench harness for decoder-only LLMs (Llama / Phi / TinyLlama) running through yscv-onnx"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[[bin]]
name = "yscv-llm-bench"
path = "src/main.rs"

[dependencies]
yscv-onnx = { version = "0.1", path = "../../crates/yscv-onnx", default-features = false }
yscv-tensor = { version = "0.1", path = "../../crates/yscv-tensor" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true

[lints]
workspace = true
