[package]
name = "yscv-autograd"
description = "Dynamic computation graph with tape-based reverse-mode autodiff"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
yscv-kernels = { version = "0.1", path = "../yscv-kernels" }
yscv-tensor = { version = "0.1", path = "../yscv-tensor" }
thiserror.workspace = true

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "autograd_graph_ops"
harness = false

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
