[package]
name = "yscv-cli"
description = "CLI for inference, benchmarking, and evaluation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = []
native-camera = ["yscv-video/native-camera"]

[dependencies]
yscv-detect = { version = "0.1", path = "../yscv-detect" }
yscv-eval = { version = "0.1", path = "../yscv-eval" }
yscv-recognize = { version = "0.1", path = "../yscv-recognize" }
yscv-track = { version = "0.1", path = "../yscv-track" }
yscv-tensor = { version = "0.1", path = "../yscv-tensor" }
yscv-video = { version = "0.1", path = "../yscv-video" }
serde_json = "1.0"
thiserror.workspace = true

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "cli_runtime_ops"
harness = false

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
