[package]
name = "yscv-detect"
description = "Object detection pipeline with YOLOv8, NMS, and heatmap decoding"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
onnx = ["yscv-onnx"]

[dependencies]
yscv-onnx = { version = "0.1", path = "../yscv-onnx", optional = true }
yscv-tensor = { version = "0.1", path = "../yscv-tensor" }
yscv-video = { version = "0.1", path = "../yscv-video" }
thiserror.workspace = true

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
proptest = "1"

[[bench]]
name = "detect_heatmap_scratch"
harness = false

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
