[package]
name = "yscv-imgproc"
description = "100+ SIMD-accelerated image processing operations for u8 and f32"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
yscv-tensor = { version = "0.1", path = "../yscv-tensor" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "webp"] }
thiserror.workspace = true
rayon = "1.11"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
proptest = "1"

[[bench]]
name = "imgproc_ops"
harness = false

[[bench]]
name = "imgproc_morph"
harness = false

[[bench]]
name = "imgproc_u8"
harness = false

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
