[package]
name = "yscv-kernels"
description = "CPU and GPU compute backends with SIMD dispatch and BLAS integration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = ["blas"]
blas = []
mkl = []
armpl = []
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]
metal-backend = ["dep:metal", "dep:objc", "dep:block", "dep:foreign-types"]
rknn = ["dep:libc", "dep:tempfile"]

[dependencies]
bytemuck = { version = "1", optional = true, features = ["derive"] }
pollster = { version = "0.4", optional = true }
rayon = "1.11"
yscv-tensor = { version = "0.1", path = "../yscv-tensor" }
thiserror.workspace = true
wgpu = { version = "29", optional = true }
metal = { version = "0.18", optional = true }
objc = { version = "0.2", optional = true }
block = { version = "0.1", optional = true }
foreign-types = { version = "0.3", optional = true }
libc = { version = "0.2", optional = true }
tempfile = { version = "3", optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
proptest = "1"

[[bench]]
name = "kernels_cpu_ops"
harness = false

[package.metadata.docs.rs]
features = ["gpu", "metal-backend", "rknn"]

[lints]
workspace = true
