[package]
name = "yscv-kernels"
description = "CPU and GPU compute backends with SIMD dispatch and BLAS integration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = ["blas"]
blas = ["dep:cblas-sys"]
mkl = []
armpl = []
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]
metal-backend = ["dep:metal", "dep:objc", "dep:block", "dep:foreign-types"]
rknn = ["dep:libc", "dep:tempfile"]

[dependencies]
bytemuck = { version = "1", optional = true, features = ["derive"] }
pollster = { version = "0.4", optional = true }
rayon = "1.11"
yscv-tensor = { version = "0.1", path = "../yscv-tensor" }
yscv-threadpool = { version = "0.1", path = "../yscv-threadpool" }
thiserror.workspace = true
wgpu = { version = "29", optional = true }
metal = { version = "0.18", optional = true }
objc = { version = "0.2", optional = true }
block = { version = "0.1", optional = true }
foreign-types = { version = "0.3", optional = true }
libc = { version = "0.2", optional = true }
tempfile = { version = "3", optional = true }
# cblas-sys gives us battle-tested Windows-compatible FFI for cblas_sgemm.
# Our previous hand-rolled `extern "C"` declaration worked on macOS
# (Accelerate) and Linux (OpenBLAS) but triggered a numerical bug on
# vcpkg OpenBLAS + MSVC for certain small-matrix inputs — see the
# `windows_repro_matmul_associative_with_scalar` regression test in
# `proptest_tests.rs`.
cblas-sys = { version = "0.1", optional = true }

[build-dependencies]
# Used by build.rs to compile hand-tuned SGEMM microkernels from `src/asm/*.s`
# into a static library that links into the crate. `cc` handles platform-specific
# object-file and symbol-decoration differences (ELF vs Mach-O vs COFF).
cc = "1.0"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
proptest = "1"

[[bench]]
name = "kernels_cpu_ops"
harness = false

[package.metadata.docs.rs]
features = ["gpu", "metal-backend", "rknn"]

[lints]
workspace = true
