[package]
name = "yscv-model"
description = "Neural network layers, training loop, model zoo, and data loading"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
yscv-autograd = { version = "0.1", path = "../yscv-autograd" }
yscv-imgproc = { version = "0.1", path = "../yscv-imgproc" }
yscv-kernels = { version = "0.1", path = "../yscv-kernels" }
yscv-onnx = { version = "0.1", path = "../yscv-onnx" }
yscv-optim = { version = "0.1", path = "../yscv-optim" }
yscv-tensor = { version = "0.1", path = "../yscv-tensor" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "model_runtime_ops"
harness = false

[lints]
workspace = true
