[package]
name = "yscv-optim"
description = "Optimizers (SGD, Adam, LAMB), LR schedulers, and gradient clipping"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
yscv-autograd = { version = "0.1", path = "../yscv-autograd" }
yscv-tensor = { version = "0.1", path = "../yscv-tensor" }
thiserror.workspace = true

[lints]
workspace = true
