[package]
name = "yscv-quantize-cli"
description = "Post-training quantization CLI: calibrate fp32 ONNX + sample inputs into a QDQ-format INT8 model"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[[bin]]
name = "yscv-quantize"
path = "src/main.rs"

[dependencies]
yscv-onnx = { version = "0.1", path = "../yscv-onnx", default-features = false }
yscv-tensor = { version = "0.1", path = "../yscv-tensor" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true

[lints]
workspace = true
