[package]
name = "yscv-recognize"
description = "Face/object recognition with cosine matching and VP-Tree ANN"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
yscv-tensor = { version = "0.1", path = "../yscv-tensor" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "recognize_slice_vs_tensor"
harness = false

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
