[package]
name = "yscv-threadpool"
description = "Custom work-stealing thread pool with priority-aware cold-idle spin — drop-in for rayon::ThreadPool in yscv inference paths"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
# Chase-Lev work-stealing deques (same implementation rayon uses internally).
# Writing our own would duplicate well-tested code and invite subtle races.
crossbeam-deque = "0.8"
# Thin FFI to `sched_setaffinity` (Linux) / `thread_policy_set` (Darwin).
libc = "0.2"
# Rayon is a runtime dep so we can implement `ParallelScope` for
# `rayon::ThreadPool` and let callers switch between backends at runtime
# via the `YSCV_POOL=rayon|yscv` env. Rayon is already a transitive dep
# of yscv-kernels and yscv-onnx, so adding it here is free.
rayon = "1.11"

[lints]
workspace = true
