[package]
name = "yscv-track"
description = "Multi-object tracking with DeepSORT, ByteTrack, and Kalman filter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
yscv-detect = { version = "0.1", path = "../yscv-detect" }
yscv-tensor = { version = "0.1", path = "../yscv-tensor" }
thiserror.workspace = true

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "tracker_update"
harness = false

[lints]
workspace = true
