[package]
name = "yscv-video-mpp"
description = "Rockchip MPP (Media Process Platform) hardware H.264/HEVC encoder via dlopen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = []
mpp = ["dep:libc"]

[dependencies]
libc = { version = "0.2", optional = true }
thiserror.workspace = true

[lints]
workspace = true
